Rajout de quelques balises meta, h1 et img

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LI Kevin - Formation Universitaire Strasbourg LP DWCA 2021</title>
-    <meta name="description" content="LP DWCA est une formation universitaire à Strasbourg, réalisée en 2021 par LI Kevin"> 
+    <meta name="description" content="Licence professionnelle développement web, communication et apprentissages, Formation 100% à distance dispensée par l’Université de Strasbourg en 2021."> 
+    <meta name="robots" content="index,follow">
+    <meta name="googlebot" content="index,follow">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="LI Kevin - Formation Universitaire Strasbourg LP DWCA 2021">
+    <meta property="og:url" content="https://601c2e37a74f51696969b4e1--frosty-lamarr-52d0c0.netlify.app/">
+    <meta property="og:description" content="Licence professionnelle développement web, communication et apprentissages, Formation 100% à distance dispensée par l’Université de Strasbourg en 2021.">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <h1></h1>
+    <img src="/Assets/Images/Logo_LPDWCA.png" alt="LP DWCA Développement Web, Communication et Apprentissages, Formation Universitaire 2021">
 </body>
 </html>
