changed some stuff

--- a/index.html
+++ b/index.html
@@ -3,19 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LI Kevin - Formation Universitaire Strasbourg LP DWCA 2021</title>
-    <meta name="description" content="Licence professionnelle développement web, communication et apprentissages, Formation 100% à distance dispensée par l’Université de Strasbourg en 2021."> 
+    <title>FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne</title>
+    <meta name="description" content="Vendre et acheter des jeux sur PC et Console"> 
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="LI Kevin - Formation Universitaire Strasbourg LP DWCA 2021">
-    <meta property="og:url" content="https://601c2e37a74f51696969b4e1--frosty-lamarr-52d0c0.netlify.app/">
-    <meta property="og:description" content="Licence professionnelle développement web, communication et apprentissages, Formation 100% à distance dispensée par l’Université de Strasbourg en 2021.">
-    <link rel="stylesheet" href="index.css">
+    <meta property="og:title" content="FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne">
+    <meta property="og:url" content="http://formunivstraslpdwca21.xyz/">
+    <meta property="og:description" content="Vendre et acheter des jeux sur PC et Console">
+    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/materialize.css">
+    <script src="js/materialize.js"></script>
 </head>
 <body>
-    <h1></h1>
-    <img src="/Assets/Images/Logo_LPDWCA.png" alt="LP DWCA Développement Web, Communication et Apprentissages, Formation Universitaire 2021">
+    <main>
+        <header class="container">
+            <nav>
+                <div class="nav-wrapper">
+                  <a href="#" class="brand-logo">
+                      <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="75px" height="75px">
+                  </a>
+                  <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li class="active"><a href="#">Accueil</a></li>
+                    <li><a href="catalogue.html">Catalogue</a></li>
+                    <li><a href="badges.html">Contact</a></li>
+                  </ul>
+                </div>
+              </nav>
+        </header>
+        <h1></h1>
+    </main>
 </body>
 </html>
