rajout du footer, contenu, images

--- a/index.html
+++ b/index.html
@@ -17,22 +17,67 @@
     <script src="js/materialize.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+              <a href="#" class="brand-logo">
+                  <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
+              </a>
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li class="active"><a href="#">Accueil</a></li>
+                <li><a href="catalogue.html">Catalogue</a></li>
+                <li><a href="badges.html">Contact</a></li>
+              </ul>
+            </div>
+          </nav>
+    </header>
     <main>
-        <header class="container">
-            <nav>
-                <div class="nav-wrapper">
-                  <a href="#" class="brand-logo">
-                      <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="75px" height="75px">
-                  </a>
-                  <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li class="active"><a href="#">Accueil</a></li>
-                    <li><a href="catalogue.html">Catalogue</a></li>
-                    <li><a href="badges.html">Contact</a></li>
-                  </ul>
-                </div>
-              </nav>
-        </header>
-        <h1></h1>
+        <div class="container">
+            <h1>Meilleurs jeux vidéos</h1>
+            <img src="/Assets/Images/formaunivstraslpdwca21_psp.jpg" alt="Produit PSP vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+            <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+            <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+        </div>
+        <div class="container">
+            <h2>A propos</h2>
+            <p>La plateforme FormaUnivStrasLPDWCA21 a été créée en 2021 suite à un concours SEO réalisé dans le cadre d'une formation en développement Web. 
+                En effet, nous devions créer un site et l'héberger, pour arriver dans les meilleurs classements sur la requête "formaunivstraslpdwca21". <br>
+                C'est ainsi qu'a vu le jour cette magnifique plateforme, qui n'aurait jamais vu le jour sans votre support. <br>
+                Nous nous efforçons de proposer les meilleurs tarifs afin que vous puissiez profiter de vos soirées pour le moins cher possible ! <br>
+                Avec FormaUnivStrasLPDWCA21, rejoignez une communauté de gamers aguerris 
+            </p>
+        </div>
     </main>
+    <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">FormaUnivStrasLPDWCA21</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="#!">Assistance</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Blog</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">A propos</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Mentions légales</a></li>
+              </ul>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Visitez d'autres concurrents</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © LI Kevin
+          </div>
+        </div>
+      </footer>
+          
+
 </body>
 </html>
