--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="active"><a href="#">Accueil</a></li>
-                <li><a href="catalogue.html">Catalogue</a></li>
-                <li><a href="badges.html">Contact</a></li>
+                <li><a href="#">Catalogue</a></li>
+                <li><a href="#">Contact</a></li>
               </ul>
             </div>
           </nav>
