Added 2 pages, modified content

--- a/index.html
+++ b/index.html
@@ -25,27 +25,40 @@
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="active"><a href="#">Accueil</a></li>
-                <li><a href="#">Catalogue</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./HTML/catalogue.html">Catalogue</a></li>
+                <li><a href="./HTML/about.html">A Propos</a></li>
               </ul>
             </div>
           </nav>
     </header>
     <main>
-        <div class="container">
-            <h1>Meilleurs jeux vidéos</h1>
-            <img src="/Assets/Images/formaunivstraslpdwca21_psp.jpg" alt="Produit PSP vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
-            <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
-            <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+        <div class="center" id="background">
+            <h1>FormaUnivStrasLPDWCA21</h1>
+            <p>Viens découvrir nos meilleurs sélections et agrandis ton catalogue de jeux !</p>
         </div>
-        <div class="container">
-            <h2>A propos</h2>
-            <p>La plateforme FormaUnivStrasLPDWCA21 a été créée en 2021 suite à un concours SEO réalisé dans le cadre d'une formation en développement Web. 
-                En effet, nous devions créer un site et l'héberger, pour arriver dans les meilleurs classements sur la requête "formaunivstraslpdwca21". <br>
-                C'est ainsi qu'a vu le jour cette magnifique plateforme, qui n'aurait jamais vu le jour sans votre support. <br>
-                Nous nous efforçons de proposer les meilleurs tarifs afin que vous puissiez profiter de vos soirées pour le moins cher possible ! <br>
-                Avec FormaUnivStrasLPDWCA21, rejoignez une communauté de gamers aguerris 
+        <div class="center">
+            <h2>FormaUnivStrasLPDWCA21 - C'est quoi ?</h2>
+            <p>Ce site a été créer dans le cadre de la <b> formation universitaire LP DWCA à Strasbourg, en 2021. </b> <br>
+              Notre note est basée sur notre référencement, du coup, bon courage à tous ! <br>
+              Tout ça pour rappeler que l'entièreté du contenu est fictif, donc il ne faut pas trop y prêter attention. <br>
             </p>
+            <figure>
+              <img src="./Assets/Images/formaunivstraslpdwca21_paysage.jpg" alt="Locaux de FormaUnivStrasLPDWCA21" width="100%" height="500px">
+              <figcaption>Admire les locaux pixélisés de FormaUnivStrasLPDWCA21 !</figcaption>
+            </figure>
+        </div>
+        <div class="center">
+            <h2>FormaUnivStrasLPDWCA21 : bien plus que des jeux vidéos !</h2>
+            <p> Eh oui : ici on est aussi fanas d'autres choses que les jeux vidéos. <br>
+              Genre les escape games ! tu kiffes ça? nous aussi ! <br>
+              Ca fais réfléchir, ça change de quand tu fais que pan pan sur des jeux de tirs. <br>
+              En plus, les énigmes, on les invente nous mêmes. Les mécanismes, l'histoire... tout est fait maison ! tu vas voir, tu vas adorer. <br>
+              T'attends quoi pour nous rejoindre ?!
+            </p>
+            <figure>
+              <img src="./Assets/Images/escape_game_formaunivstraslpdwca21.jpg" alt="Escape Game chez FormaUnivStrasLPDWCA21" width="100%" height="500px">
+              <figcaption>Viens résoudre des énigmes chez nous !</figcaption>
+            </figure>
         </div>
     </main>
     <footer class="page-footer">
