--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne">
-    <meta property="og:url" content="http://formunivstraslpdwca21.xyz/">
+    <meta property="og:url" content="https://formunivstraslpdwca21.xyz/">
     <meta property="og:description" content="Vendre et acheter des jeux sur PC et Console">
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="./CSS/materialize.css">
