--- a/HTML/about.html
+++ b/HTML/about.html
@@ -10,7 +10,7 @@
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - A propos de nous">
-    <meta property="og:url" content="http://formunivstraslpdwca21.xyz/HTML/about.html">
+    <meta property="og:url" content="https://formunivstraslpdwca21.xyz/HTML/about.html">
     <meta property="og:description" content="Vendre et acheter des jeux sur PC et Console">
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/materialize.css">
@@ -20,11 +20,11 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-              <a href="/index.html" class="brand-logo">
+              <a href="/" class="brand-logo">
                   <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/index.html">Accueil</a></li>
+                <li><a href="/">Accueil</a></li>
                 <li><a href="./catalogue.html">Catalogue</a></li>
                 <li class="active"><a href="#">A Propos</a></li>
               </ul>
