--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -10,7 +10,7 @@
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - Catalogue">
-    <meta property="og:url" content="http://formunivstraslpdwca21.xyz/HTML/catalogue.html">
+    <meta property="og:url" content="https://formunivstraslpdwca21.xyz/HTML/catalogue.html">
     <meta property="og:description" content="Vendre et acheter des jeux sur PC et Console">
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/materialize.css">
@@ -20,11 +20,11 @@
     <header>
         <nav>
             <div class="nav-wrapper">
-              <a href="/index.html" class="brand-logo">
+              <a href="/" class="brand-logo">
                   <img src="/Assets/Images/logo_formaunivstraslpdwca21.png" alt="Logo de l'enseigne FormaUnivStrasLPDWCA21" width="70px" height="70px">
               </a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="/index.html">Accueil</a></li>
+                <li><a href="/">Accueil</a></li>
                 <li class="active"><a href="#">Catalogue</a></li>
                 <li><a href="./about.html">A Propos</a></li>
               </ul>
@@ -51,19 +51,19 @@
             <div class="col l6 s12">
               <h5 class="white-text">FormaUnivStrasLPDWCA21</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Assistance</a></li>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Blog</a></li>
-                <li><a class="grey-text text-lighten-3" href="/index.html">A propos</a></li>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Mentions légales</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Assistance</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Blog</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">A propos</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Mentions légales</a></li>
               </ul>
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Visitez d'autres concurrents</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="/index.html">Link 4</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Link 2</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3" href="/">Link 4</a></li>
               </ul>
             </div>
           </div>
