small refator and added link to another site

--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="container">
-            <h2>Notre catalogue</h2>
+            <h2>La sélection FormaUnivStrasLPDWCA21</h2>
             <img src="/Assets/Images/formaunivstraslpdwca21_psp.jpg" alt="Produit PSP vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
             <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
             <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
