--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Visitez d'autres concurrents</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://lpdwca.jpbauer.eu/" rel="nofollow">Julien Bauer</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
                 <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
