meta description change and added fake mail address

--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormaUnivStrasLPDWCA21 - Catalogue</title>
-    <meta name="description" content="Vendre et acheter des jeux sur PC et Console"> 
+    <meta name="description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console "> 
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:locale" content="fr_FR">
@@ -42,6 +42,10 @@
             <img src="/Assets/Images/formaunivstraslpdwca21_psp.jpg" alt="Produit PSP vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
             <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
             <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+        </div>
+
+        <div>
+          <p>Si tu as des suggestions à ajouter, n'hésites pas à nous ecrire à <a href="mailto:support.formaunivstraslpdwca21@gmail.com">support.formaunivstraslpdwca21@gmail.com</a> </p>
         </div>
     </main>
 
