added in meta description

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne">
     <meta property="og:url" content="https://formunivstraslpdwca21.xyz/">
-    <meta property="og:description" content="Vendre et acheter des jeux sur PC et Console">
+    <meta property="og:description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console">
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="./CSS/materialize.css">
     <script src="js/materialize.js"></script>
