new link to classmate

--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -55,19 +55,19 @@
             <div class="col l6 s12">
               <h5 class="white-text">FormaUnivStrasLPDWCA21</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="/">Assistance</a></li>
-                <li><a class="grey-text text-lighten-3" href="/">Blog</a></li>
-                <li><a class="grey-text text-lighten-3" href="/">A propos</a></li>
-                <li><a class="grey-text text-lighten-3" href="/">Mentions légales</a></li>
+                <li><a class="grey-text text-lighten-3">Assistance</a></li>
+                <li><a class="grey-text text-lighten-3">Blog</a></li>
+                <li><a class="grey-text text-lighten-3">A propos</a></li>
+                <li><a class="grey-text text-lighten-3">Mentions légales</a></li>
               </ul>
             </div>
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Visitez d'autres concurrents</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="/">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="/">Link 2</a></li>
-                <li><a class="grey-text text-lighten-3" href="/">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3" href="/">Link 4</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://lpdwca.jpbauer.eu/" rel="nofollow">Julien Bauer</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://musicum.alwaysdata.net/seo" rel="nofollow">Frederic Bourgoin</a></li>
+                <li><a class="grey-text text-lighten-3">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3">Link 4</a></li>
               </ul>
             </div>
           </div>
