added more links

--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
             <div class="col l4 offset-l2 s12">
               <h5 class="white-text">Visitez d'autres concurrents</h5>
               <ul>
-                <li><a class="grey-text text-lighten-3" href="https://lpdwca.jpbauer.eu/" rel="nofollow">Julien Bauer</a></li>
-                <li><a class="grey-text text-lighten-3" href="https://musicum.alwaysdata.net/seo" rel="nofollow">Frederic Bourgoin</a></li>
-                <li><a class="grey-text text-lighten-3">Link 3</a></li>
-                <li><a class="grey-text text-lighten-3">Link 4</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://lpdwca.jpbauer.eu/" rel="nofollow">Julien</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://musicum.alwaysdata.net/seo" rel="nofollow">Frederic</a></li>
+                <li><a class="grey-text text-lighten-3" href="http://baptiste-leclercq.alwaysdata.net/SEO/FormaUnivStrasLPDWCA21/Accueil.html" rel="nofollow">Link 3</a>Frederic</li>
+                <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.000webhostapp.com/index.html" rel="nofollow">Loic</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://nz26.alwaysdata.net/" rel="nofollow">Pedro</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.com/" rel="nofollow">Georges</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://seo.mariopasseri.eu/" rel="nofollow">Mario</a></li>
               </ul>
             </div>
           </div>
