footer link + meta description + small content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne</title>
-    <meta name="description" content="Vendre et acheter des jeux sur PC et Console"> 
+    <meta name="description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console"> 
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:locale" content="fr_FR">
@@ -83,6 +83,7 @@
                 <li><a class="grey-text text-lighten-3" href="https://nz26.alwaysdata.net/" rel="nofollow">Pedro</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.com/" rel="nofollow">Georges</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://seo.mariopasseri.eu/" rel="nofollow">Mario</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://juliette-hoegy.alwaysdata.net/FormaUnivStrasLPDWCA21/" rel="nofollow">Juliette</a></li>
               </ul>
             </div>
           </div>
