--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormaUnivStrasLPDWCA21 - Catalogue</title>
-    <meta name="description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console "> 
+    <meta name="description" content="FormaUnivStrasLPDWCA21 - Le catalogue de jeux sur PC et Console "> 
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:locale" content="fr_FR">
@@ -47,6 +47,12 @@
         <div>
           <p>Si tu as des suggestions à ajouter, n'hésites pas à nous ecrire à <a href="mailto:support.formaunivstraslpdwca21@gmail.com">support.formaunivstraslpdwca21@gmail.com</a> </p>
         </div>
+
+        <div>
+          <h3>Les promotions et exclusivités FormaUnivStrasLPDWCA21</h3>
+          <p>Achètes ce pack exclusif PS3 avec GTA offert, et frais de ports offerts !</p>
+          <img src="/Assets/Images/pack_ps3_formaunivstraslpdwca21.jpg" alt="Pack PS3 vendu chez FormaUnivStrasLPDWCA21" width="150px" height="100px">
+        </div>
     </main>
 
     <footer class="page-footer">
@@ -71,6 +77,7 @@
                 <li><a class="grey-text text-lighten-3" href="https://nz26.alwaysdata.net/" rel="nofollow">Pedro</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.com/" rel="nofollow">Georges</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://seo.mariopasseri.eu/" rel="nofollow">Mario</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://juliette-hoegy.alwaysdata.net/FormaUnivStrasLPDWCA21/" rel="nofollow">Juliette</a></li>
               </ul>
             </div>
           </div>
