added all links to footer

--- a/index.html
+++ b/index.html
@@ -78,12 +78,18 @@
               <ul>
                 <li><a class="grey-text text-lighten-3" href="https://lpdwca.jpbauer.eu/" rel="nofollow">Julien</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://musicum.alwaysdata.net/seo" rel="nofollow">Frederic</a></li>
-                <li><a class="grey-text text-lighten-3" href="http://baptiste-leclercq.alwaysdata.net/SEO/FormaUnivStrasLPDWCA21/Accueil.html" rel="nofollow">Link 3</a>Frederic</li>
+                <li><a class="grey-text text-lighten-3" href="http://baptiste-leclercq.alwaysdata.net/SEO/FormaUnivStrasLPDWCA21/Accueil.html" rel="nofollow"> FredB</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.000webhostapp.com/index.html" rel="nofollow">Loic</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://nz26.alwaysdata.net/" rel="nofollow">Pedro</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.com/" rel="nofollow">Georges</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://seo.mariopasseri.eu/" rel="nofollow">Mario</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://juliette-hoegy.alwaysdata.net/FormaUnivStrasLPDWCA21/" rel="nofollow">Juliette</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://formaunivstraslpdwca21.fr/" rel="nofollow">Ilyas</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://official-formaunivstraslpdwca21.alwaysdata.net/" rel="nofollow">Axel</a></li>
+                <li><a class="grey-text text-lighten-3" href="http://formaunivstraslpdwca21.online/" rel="nofollow">Lisa</a></li>
+                <li><a class="grey-text text-lighten-3" href="http://baptiste-leclercq.alwaysdata.net/SEO/FormaUnivStrasLPDWCA21/Accueil.html" rel="nofollow">Baptiste</a></li>
+                <li><a class="grey-text text-lighten-3" href="https://lpdwcaseo.alwaysdata.net/" rel="nofollow">FredJ</a></li>
+                
               </ul>
             </div>
           </div>
