added more content on main page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
             <p>Viens découvrir nos meilleurs sélections et agrandis ton catalogue de jeux !</p>
         </div>
         <div class="center">
+          <h2>Les offres de la semaine FormaUnivStrasLPDWCA21</h2>
+          <div class="flex">
+          <img src="./Assets/Images/ballon_foot_formaunivstraslpdwca21.jpg" width="300" height="300" alt="Ballon de football vendu par FormaUnivStrasLPDWCA21">
+          <img src="./Assets/Images/jeux_de_carte_formaunivstraslpdwca21.jpg"  width="300" height="300" alt="Jeu de cartes vendu par FormaUnivStrasLPDWCA21">
+          <img src="/Assets/Images/formaunivstraslpdwca21_casque_audio.jpg" alt="Casque Audio vendu chez FormaUnivStrasLPDWCA21" width="300" height="300">
+        </div>
+        <div class="center">
+          <h2>Les produits les plus vendus chez FormaUnivStrasLPDWCA21</h2>
+          <div class="flex">
+            <img src="/Assets/Images/formaunivstraslpdwca21_manette_ps2.png" alt="Manette PS2 vendue chez FormaUnivStrasLPDWCA21" width="300px" height="300px">
+            <img src="./Assets/Images/jeux_de_carte_formaunivstraslpdwca21.jpg"  width="300" height="300" alt="Jeu de cartes vendu par FormaUnivStrasLPDWCA21">
+            <img src="/Assets/Images/nes_formaunivstraslpdwca21.jpg" alt="Console NES vendue chez FormaUnivStrasLPDWCA21" width="300" height="300">
+        </div>
+        </div>
+        <div class="center">
             <h2>FormaUnivStrasLPDWCA21 - C'est quoi ?</h2>
             <p>Ce site a été créer dans le cadre de la <b> formation universitaire LP DWCA à Strasbourg, en 2021. </b> <br>
               Notre note est basée sur notre référencement, du coup, bon courage à tous ! <br>
