more and more to gain some places

--- a/HTML/catalogue.html
+++ b/HTML/catalogue.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - Catalogue">
     <meta property="og:url" content="https://formunivstraslpdwca21.xyz/HTML/catalogue.html">
+    <link rel="canonical" href="https://formunivstraslpdwca21.xyz">
     <meta property="og:description" content="FormaUnivStrasLPDWCA21 - Le catalogue de jeux sur PC et Console">
     <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="../CSS/materialize.css">
