--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormaUnivStrasLPDWCA21 - Catalogue de jeux en ligne</title>
     <meta name="description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console"> 
+    <link rel="canonical" href="https://formunivstraslpdwca21.xyz">
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
     <meta property="og:locale" content="fr_FR">
@@ -14,6 +15,23 @@
     <meta property="og:description" content="FormaUnivStrasLPDWCA21 - Vendre et acheter des jeux sur PC et Console">
     <link rel="stylesheet" href="./CSS/index.css">
     <link rel="stylesheet" href="./CSS/materialize.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="Assets/Images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="Assets/Images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="Assets/Images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="Assets/Images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="Assets/Images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="Assets/Images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="Assets/Images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="Assets/Images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="Assets/Images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/Images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="Assets/Images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/Images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="Assets/Images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="Assets/Images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <script src="js/materialize.js"></script>
 </head>
 <body>
@@ -34,7 +52,10 @@
     <main>
         <div class="center" id="background">
             <h1>FormaUnivStrasLPDWCA21</h1>
-            <p>Viens découvrir nos meilleurs sélections et agrandis ton catalogue de jeux !</p>
+            <p>Viens découvrir nos meilleurs sélections et agrandis ton catalogue de jeux ! <br>
+            Chez nous, les meilleurs promotions et les meilleurs exclusivités tu trouveras, et feront ton bonheur. <br>
+            Tu auras la meilleure expérience en venant chez nous, on te le garantie, à prendre ou à laisser. <br>
+            Allez, ce contenu est plutôt sympa, avoues</p>
         </div>
         <div class="center">
           <h2>Les offres de la semaine FormaUnivStrasLPDWCA21</h2>
@@ -75,12 +96,26 @@
               <figcaption>Viens résoudre des énigmes chez nous !</figcaption>
             </figure>
         </div>
+        <div class="center">
+          <h3>La formule préférée de l'équipe FormaUnivStrasLPDWCA21</h3>
+          <p>On le rappelle, le contenu est complètement fictif. Tout ça, c'est juste pour se placer parmi les premiers ! 
+            Je rajoute du contenu pour que la page soit bien plus remplie, comme nos réserves ! Si tu viens te fournir chez nous, tu ne seras pas déçu.
+            On a un max de consoles, de jeux à revendre, que ce soit du neuf ou d'occasion. Pour les produits d'occasion, ne t'inquiètes pas : on fait super gaffe,
+            on contrôle tout, et chez nous il y a 0 défaut. La seule chose qui doit t'inquiéter, c'est à quel point tu vas dépenser ton argent si tu viens chez nous !
+            On compte bientôt agrandir nos activités également et peut être ouvrir une branche e-sport, du coup si t'es intéressé par rejoidnre l'équipe, écris nous et on sélectionnera
+            une vingtaine de personnes sur les candidatures qu'on recevra pour former notre pole e-sport. 
+            D'ailleurs, "FormaUnivStrasLPDWCA21 Gaming" ça sonne plutôt bien en vrai. Tu trouves pas ?
+
+            On ouvrira également une petite pâtisserie dans le centre de Strasbourg, parce qu'on est des gros gourmands. Et on va se lâcher donc si t'as envie de nous rencontrer,
+            hésites pas à suivre nos réseaux sociaux pour savoir quand on va ouvrir et tu pourras te délecter d'une délicieuse pâtisserie avec nous !
+          </p>
+        </div>
     </main>
     <footer class="page-footer">
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">FormaUnivStrasLPDWCA21</h5>
+              <h4 class="white-text">FormaUnivStrasLPDWCA21</h4>
               <ul>
                 <li><a class="grey-text text-lighten-3">Assistance</a></li>
                 <li><a class="grey-text text-lighten-3">Blog</a></li>
@@ -89,7 +124,7 @@
               </ul>
             </div>
             <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Visitez d'autres concurrents</h5>
+              <h4 class="white-text">Visitez d'autres concurrents</h4>
               <ul>
                 <li><a class="grey-text text-lighten-3" href="https://lpdwca.jpbauer.eu/" rel="nofollow">Julien</a></li>
                 <li><a class="grey-text text-lighten-3" href="https://musicum.alwaysdata.net/seo" rel="nofollow">Frederic</a></li>
