--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="FormaUnivStrasLPDWCA21 - Nous contacter"> 
     <meta name="robots" content="index,follow">
     <meta name="googlebot" content="index,follow">
+    <link rel="canonical" href="https://formunivstraslpdwca21.xyz">
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
     <meta property="og:title" content="FormaUnivStrasLPDWCA21 - A propos de nous">
